my test project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Mytravelbiz",
+  "name": "mytestproject",
   "version": "0.0.1",
   "description": "Serverless module dependencies",
   "author": "LS Innovations",
